--- a/frontendDockerManager/src/app/app.component.html
+++ b/frontendDockerManager/src/app/app.component.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <header>
+      <img src="../assets/images/docker.png" alt="Docker icon" class="docker-icon">
       <h1 class="title">Docker Manager</h1>
       <div class="ctn-btn-add">
         <button class="add-container" (click)="changeState()">New container</button>
